html, css 기본 내용 추가

--- a/01_Web/02_markup.html
+++ b/01_Web/02_markup.html
@@ -10,10 +10,10 @@
   <h1>프로그래밍 교육</h1>
   <hr>
   <a href="#python">
-    <img src="./images/Python-logo.png" alt="파이썬이미지" style="width: 50px;height: 50px;"/>
+    <img src="../images/Python-logo.png" alt="파이썬이미지" style="width: 50px;height: 50px;"/>
   </a>
   <a href="#web">
-      <img src="./images/html5_logo.png" alt="웹이미지" style="width: 50px;height: 50px;"/>
+      <img src="../images/html5_logo.png" alt="웹이미지" style="width: 50px;height: 50px;"/>
   </a>
   <a href="./01_index.html">참고사이트</a>
 
